# KRatio

./: .gitignore  CMakeLists.txt  README.md  dev.jtsimon.kratio.desktop
src/: CMakeLists.txt  main.cpp  ratiocalculator.cpp  ratiocalculator.h
src/qml/: Main.qml  RatioCalculatorPage.qml
